--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
     "jest": "^29.4.1",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
 }
