--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand"
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "start": "npm run build && node dist/main/server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,11 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "module-alias": "^2.2.2",
+    "rimraf": "^4.1.2",
     "supertest": "^6.3.3"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
