--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
     "jest": "^29.4.1",
+    "prisma": "^4.9.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
