--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
     "rimraf": "^4.1.2",
